force-app/main/default/objects/Implementation__c/fields/Copy_TPA__c.field-meta.xml
<CustomField>
    <fullName>Copy_TPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy TPA</label>
    <type>Checkbox</type>
</CustomField>