force-app/main/default/objects/Implementation__c/fields/Count_of_Employees_Census__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Employees_Census__c</fullName>
    <description>Count of Employees (Census) from PRKS upload</description>
    <inlineHelpText>Count of Employees (Census) from PRKS upload</inlineHelpText>
    <label>Count of Employees (Census)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>