force-app/main/default/objects/Implementation__c/fields/CST_Client_Support_Team__c.field-meta.xml
<CustomField>
    <fullName>CST_Client_Support_Team__c</fullName>
    <description>CST associated with this Implementations</description>
    <inlineHelpText>CST associated with this Implementations</inlineHelpText>
    <label>CST (Client Support Team)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Support</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Single(k)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>