force-app/main/default/objects/Implementation__c/fields/Custodial_Account_Number_Received__c.field-meta.xml
<CustomField>
    <fullName>Custodial_Account_Number_Received__c</fullName>
    <description>Date when Custodial account ID is received back from the Custodian.</description>
    <inlineHelpText>Date when Custodial account ID is received back from the Custodian.</inlineHelpText>
    <label>Custodial Account Number Received</label>
    <type>Date</type>
</CustomField>