force-app/main/default/objects/Implementation__c/fields/Custodial_Account_Setup__c.field-meta.xml
<CustomField>
    <fullName>Custodial_Account_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when custodial account application is complete and Custodial account ID is populated (07C for Matrix)</description>
    <inlineHelpText>Check when custodial account application is complete and Custodial account ID is populated (07C for Matrix)</inlineHelpText>
    <label>Custodial Account Setup</label>
    <type>Checkbox</type>
</CustomField>