force-app/main/default/objects/Implementation__c/fields/Custodial_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Custodial_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has Custodial Agreement been Signed?</description>
    <inlineHelpText>Has Custodial Agreement been Signed?</inlineHelpText>
    <label>Custodial Agreement</label>
    <type>Checkbox</type>
</CustomField>