force-app/main/default/objects/Implementation__c/fields/Custodian_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Custodian_Account_ID__c</fullName>
    <label>Custodian Account ID</label>
    <type>TextArea</type>
</CustomField>