force-app/main/default/objects/Implementation__c/fields/Custom_Fund_List_Completed__c.field-meta.xml
<CustomField>
    <fullName>Custom_Fund_List_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Fund List Completed</label>
    <type>Checkbox</type>
</CustomField>