force-app/main/default/objects/Implementation__c/fields/Dashboard_Overview_Tutorial_Complete__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Overview_Tutorial_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked from Overview page when client completes dashboard overview tutorial video.</description>
    <inlineHelpText>Checked from Overview page when client completes dashboard overview tutorial video.</inlineHelpText>
    <label>Dashboard Overview Tutorial Complete</label>
    <type>Checkbox</type>
</CustomField>