force-app/main/default/objects/Implementation__c/fields/Days_Since_Outbound_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Outbound_Activity__c</fullName>
    <description>Days since last case outbound activity date</description>
    <formula>IF( ISNULL(Last_Case_Outbound_Activity__c) , TODAY()- DATEVALUE(CreatedDate) , TODAY() -  Last_Case_Outbound_Activity__c)</formula>
    <inlineHelpText>Days since last case outbound activity date</inlineHelpText>
    <label>Days Since Outbound Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>