force-app/main/default/objects/Implementation__c/fields/Days_to_End_of_Plan_Hold__c.field-meta.xml
<CustomField>
    <fullName>Days_to_End_of_Plan_Hold__c</fullName>
    <description>Number of days until end of plan hold.   Used to trigger reminder to Implementation Owner.</description>
    <formula>Estimated_Plan_Release_Date__c - TODAY()</formula>
    <inlineHelpText>Number of days until end of plan hold.   Used to trigger reminder to Implementation Owner.</inlineHelpText>
    <label>Days to End of Plan Hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>