force-app/main/default/objects/Implementation__c/fields/Deferral_Change_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Change_Frequency__c</fullName>
    <description>How often can employees change their deferrals in the plan?</description>
    <inlineHelpText>How often can employees change their deferrals in the plan?</inlineHelpText>
    <label>Deferral Change Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annaully</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-Weekly</fullName>
            </value>
            <value>
                <fullName>Per Pay Period</fullName>
                <default>true</default>
                <label>Per Pay Period</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>