force-app/main/default/objects/Implementation__c/fields/Deferral_Loan_Push_Method__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Loan_Push_Method__c</fullName>
    <description>Method used to input requested deferral $/% and/or loan payments into client/provider payroll system</description>
    <inlineHelpText>How requested deferrals/loan payments get into payroll system:
Client = Client enters it themselves
Integration = 360 Integrated partner
EPS Manual = UBQT enters for client
EPS 3rd Party = 3rd party enters for client</inlineHelpText>
    <label>Deferral / Loan Push Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>EPS - Manual</fullName>
            </value>
            <value>
                <fullName>EPS - 3rd Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>