force-app/main/default/objects/Implementation__c/fields/Demo_Adding_an_Employee__c.field-meta.xml
<CustomField>
    <fullName>Demo_Adding_an_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Adding an Employee</label>
    <type>Checkbox</type>
</CustomField>