force-app/main/default/objects/Implementation__c/fields/Design_Provisions__c.field-meta.xml
<CustomField>
    <fullName>Design_Provisions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Discuss selected plan provisions and product and ensure client understands</description>
    <inlineHelpText>Discuss selected plan provisions and product and ensure client understands</inlineHelpText>
    <label>Design &amp; Provisions</label>
    <type>Checkbox</type>
</CustomField>