force-app/main/default/objects/Implementation__c/fields/Desired_Plan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Plan_Start_Date__c</fullName>
    <description>What date does the plan wish to start?</description>
    <inlineHelpText>What date does the plan wish to start?</inlineHelpText>
    <label>Desired Plan Start Date</label>
    <type>Date</type>
</CustomField>