force-app/main/default/objects/Implementation__c/fields/Discretionary_Match__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Match__c</fullName>
    <inlineHelpText>Yes/No</inlineHelpText>
    <label>Discretionary Match</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>