force-app/main/default/objects/Implementation__c/fields/Discretionary_Match_Formula_Notes__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Match_Formula_Notes__c</fullName>
    <inlineHelpText>Potential formula discussed with decision maker</inlineHelpText>
    <label>Discretionary Match Formula/Notes</label>
    <type>TextArea</type>
</CustomField>