force-app/main/default/objects/Implementation__c/fields/Discretionary_Match_Vesting_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Match_Vesting_Schedule__c</fullName>
    <description>What is the vesting schedule for Discretionary Match Contributions?</description>
    <inlineHelpText>What is the vesting schedule for Discretionary Match Contributions?</inlineHelpText>
    <label>Discretionary Match Vesting Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Option__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Vesting_schedule</valueSetName>
    </valueSet>
</CustomField>