force-app/main/default/objects/Implementation__c/fields/Discuss_Census__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Census__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Remind client to add termination dates for departed employees</description>
    <inlineHelpText>Remind client to add termination dates for departed employees</inlineHelpText>
    <label>Discuss Ongoing Census Duties</label>
    <type>Checkbox</type>
</CustomField>