force-app/main/default/objects/Implementation__c/fields/Discuss_Kotapay__c.field-meta.xml
<CustomField>
    <fullName>Discuss_Kotapay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discuss Kotapay</label>
    <type>Checkbox</type>
</CustomField>