force-app/main/default/objects/Implementation__c/fields/Discussed_Integration__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If client will use integration, explain how census will be handled through direct communication with the PR provider</description>
    <inlineHelpText>If client will use integration, explain how census will be handled through direct communication with the PR provider</inlineHelpText>
    <label>Discussed Integration</label>
    <type>Checkbox</type>
</CustomField>