force-app/main/default/objects/Implementation__c/fields/Doc_Regen_Reason_s__c.field-meta.xml
<CustomField>
    <fullName>Doc_Regen_Reason_s__c</fullName>
    <description>Reason(s) documents were regenerated</description>
    <inlineHelpText>Reason(s) documents were regenerated</inlineHelpText>
    <label>Doc Regen Reason(s)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Address change</fullName>
            </value>
            <value>
                <fullName>Advisor status changes to Green</fullName>
            </value>
            <value>
                <fullName>Business Type</fullName>
            </value>
            <value>
                <fullName>Company Name change</fullName>
            </value>
            <value>
                <fullName>Effective date changed</fullName>
            </value>
            <value>
                <fullName>EIN</fullName>
            </value>
            <value>
                <fullName>Funds list changed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Plan name change</fullName>
            </value>
            <value>
                <fullName>Plan Provisions Updated</fullName>
            </value>
            <value>
                <fullName>Trustee changed</fullName>
            </value>
            <value>
                <fullName>Trustee email changed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>