force-app/main/default/objects/Implementation__c/fields/Document_Correction__c.field-meta.xml
<CustomField>
    <fullName>Document_Correction__c</fullName>
    <inlineHelpText>Enter the date that a document correction is made in paradigm. If documents have been signed previously, this would be considered a correction.</inlineHelpText>
    <label>Document Correction</label>
    <type>Date</type>
</CustomField>