force-app/main/default/objects/Implementation__c/fields/Document_Pre_Approval_Completed__c.field-meta.xml
<CustomField>
    <fullName>Document_Pre_Approval_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Copied from Opportunity at time of Sale.   Conversion Plans only.</description>
    <inlineHelpText>Copied from Opportunity at time of Sale.   Conversion Plans only.</inlineHelpText>
    <label>Document Pre Approval Completed</label>
    <type>Checkbox</type>
</CustomField>