force-app/main/default/objects/Implementation__c/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <description>EIN External ID from Account</description>
    <externalId>true</externalId>
    <inlineHelpText>EIN External ID from Account</inlineHelpText>
    <label>EIN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>