force-app/main/default/objects/Implementation__c/fields/Employee_Monthly_Fees__c.field-meta.xml
<CustomField>
    <fullName>Employee_Monthly_Fees__c</fullName>
    <description>Amount employees will pay monthly.</description>
    <inlineHelpText>Amount employees will pay monthly.</inlineHelpText>
    <label>Employee Monthly Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>