force-app/main/default/objects/Implementation__c/fields/Employer_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Employer_Identification_Number__c</fullName>
    <inlineHelpText>EIN from Account linked to the Implementation</inlineHelpText>
    <label>Employer Identification Number (EIN)</label>
    <type>TextArea</type>
</CustomField>