force-app/main/default/objects/Implementation__c/fields/Employer_Identification_Number_New__c.field-meta.xml
<CustomField>
    <fullName>Employer_Identification_Number_New__c</fullName>
    <formula>Account__r.Employer_Identification_Number_EIN__c</formula>
    <label>Employer Identification Number</label>
    <type>Text</type>
</CustomField>