force-app/main/default/objects/Implementation__c/fields/Escalated1__c.field-meta.xml
<CustomField>
    <fullName>Escalated1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags Implementation as Escalated</description>
    <inlineHelpText>Flags Implementation as Escalated</inlineHelpText>
    <label>Escalated</label>
    <type>Checkbox</type>
</CustomField>