force-app/main/default/objects/Implementation__c/fields/Escalated_Notes__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Notes__c</fullName>
    <label>Escalated Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>