force-app/main/default/objects/Implementation__c/fields/Estimated_Plan_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Plan_Release_Date__c</fullName>
    <description>When a plan is placed &quot;On Hold&quot;, enter the date the client expects to start it back up</description>
    <inlineHelpText>When a plan is placed &quot;On Hold&quot;, enter the date the client expects to start it back up</inlineHelpText>
    <label>Estimated Plan Release Date</label>
    <type>Date</type>
</CustomField>