force-app/main/default/objects/Implementation__c/fields/Expected_1st_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Expected_1st_Payroll__c</fullName>
    <description>Expected date of 1st payroll submission</description>
    <inlineHelpText>Expected date of 1st payroll submission</inlineHelpText>
    <label>Expected 1st Payroll</label>
    <type>Date</type>
</CustomField>