force-app/main/default/objects/Implementation__c/fields/Fidelity_Bond_Application__c.field-meta.xml
<CustomField>
    <fullName>Fidelity_Bond_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when Fidelity Bond Application is received. Auto Check for Simply.</description>
    <inlineHelpText>Check when Fidelity Bond Application is received. Auto Check for Simply.</inlineHelpText>
    <label>Fidelity Bond Application</label>
    <type>Checkbox</type>
</CustomField>