force-app/main/default/objects/Implementation__c/fields/Fidelity_Bond_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Fidelity_Bond_Discussed__c</fullName>
    <description>Date Fidelity bond email was sent to client</description>
    <inlineHelpText>Date Fidelity bond email was sent to client</inlineHelpText>
    <label>Fidelity Bond Discussed</label>
    <type>Date</type>
</CustomField>