force-app/main/default/objects/Implementation__c/fields/Fidelity_Bond_Received__c.field-meta.xml
<CustomField>
    <fullName>Fidelity_Bond_Received__c</fullName>
    <description>Date Fidelity Bond was received from the client.</description>
    <inlineHelpText>Date Fidelity Bond was received from the client.</inlineHelpText>
    <label>Fidelity Bond Received</label>
    <type>Date</type>
</CustomField>