force-app/main/default/objects/Implementation__c/fields/Final_Handoff_to_CST__c.field-meta.xml
<CustomField>
    <fullName>Final_Handoff_to_CST__c</fullName>
    <description>Final email from Payroll (K)oncierge to Client Support after Implementation is Complete</description>
    <inlineHelpText>Final email from Payroll (K)oncierge to Client Support after Implementation is Complete</inlineHelpText>
    <label>Final Handoff to CST</label>
    <type>Date</type>
</CustomField>