force-app/main/default/objects/Implementation__c/fields/Final_Reporting_Received__c.field-meta.xml
<CustomField>
    <fullName>Final_Reporting_Received__c</fullName>
    <description>All Required data received to post the conversion</description>
    <inlineHelpText>All Required data received to post the conversion</inlineHelpText>
    <label>Final Reporting Received</label>
    <type>Date</type>
</CustomField>