force-app/main/default/objects/Implementation__c/fields/Final_Reporting_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Final_Reporting_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used on Plan Overview Page to determine the appropriate display and workflow</inlineHelpText>
    <label>Final Reporting Uploaded</label>
    <type>Checkbox</type>
</CustomField>