force-app/main/default/objects/Implementation__c/fields/Finch_Credential_Status__c.field-meta.xml
<CustomField>
    <fullName>Finch_Credential_Status__c</fullName>
    <formula>TEXT(Account__r.Finch_Credential_Status__c)</formula>
    <label>Finch Credential Status</label>
    <type>Text</type>
</CustomField>