force-app/main/default/objects/Implementation__c/fields/Finch_Disabled__c.field-meta.xml
<CustomField>
    <fullName>Finch_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this box to mark a plan that is no longer using Finch</description>
    <inlineHelpText>Use this box to mark a plan that is no longer using Finch</inlineHelpText>
    <label>Finch Disabled</label>
    <type>Checkbox</type>
</CustomField>