force-app/main/default/objects/Implementation__c/fields/Finch_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Finch_Implementation__c</fullName>
    <formula>(NOT(ISBLANK( Finch_T_C__c ))

||

NOT(ISBLANK( Account__r.Finch_T_C__c  )))

&amp;&amp; 

( NOT(ISPICKVAL(Finch_Opt_Out__c, &quot;Yes&quot;)) ||  Finch_Credential_Status__c = &quot;Active&quot;)

&amp;&amp;

Finch_Disabled__c = false</formula>
    <label>Finch Implementation</label>
    <type>Checkbox</type>
</CustomField>