force-app/main/default/objects/Implementation__c/fields/Finch_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Finch_Opt_Out__c</fullName>
    <inlineHelpText>Using Finch eligible payroll provider but isn&apos;t interested</inlineHelpText>
    <label>Finch Opt Out</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>