force-app/main/default/objects/Implementation__c/fields/Finch_Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Finch_Payroll_Provider__c</fullName>
    <label>Finch Payroll Provider</label>
    <length>80</length>
    <type>Text</type>
</CustomField>