force-app/main/default/objects/Implementation__c/fields/Finch_T_C__c.field-meta.xml
<CustomField>
    <fullName>Finch_T_C__c</fullName>
    <label>Finch T&amp;C</label>
    <type>Date</type>
</CustomField>