force-app/main/default/objects/Implementation__c/fields/First_Enrollment_Meeting__c.field-meta.xml
<CustomField>
    <fullName>First_Enrollment_Meeting__c</fullName>
    <description>Populated when enrollment meeting is conducted.</description>
    <inlineHelpText>Populated when enrollment meeting is conducted.</inlineHelpText>
    <label>First Enrollment Meeting</label>
    <type>Date</type>
</CustomField>