force-app/main/default/objects/Implementation__c/fields/Fiscal_Yr_End_MMDD__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Yr_End_MMDD__c</fullName>
    <description>MMDD Format</description>
    <inlineHelpText>MMDD Format</inlineHelpText>
    <label>Fiscal Yr End (MMDD)</label>
    <length>4</length>
    <type>Text</type>
</CustomField>