force-app/main/default/objects/Implementation__c/fields/Following_Year_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Following_Year_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if plan provisions will change as of the following year</description>
    <inlineHelpText>Indicates if plan provisions will change as of the following year</inlineHelpText>
    <label>Following Year Amendment</label>
    <type>Checkbox</type>
</CustomField>