force-app/main/default/objects/Implementation__c/fields/Following_Year_Amendment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Following_Year_Amendment_Notes__c</fullName>
    <description>Additional details regarding following year amendment</description>
    <inlineHelpText>Additional details regarding following year amendment</inlineHelpText>
    <label>Following Year Amendment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>