force-app/main/default/objects/Implementation__c/fields/Funding_Account_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Funding_Account_Confirmed__c</fullName>
    <description>Date funding account information in Paradigm was verified as complete</description>
    <inlineHelpText>Date funding account information in Paradigm was verified as complete</inlineHelpText>
    <label>Funding Account Confirmed</label>
    <type>Date</type>
</CustomField>