force-app/main/default/objects/Implementation__c/fields/Funding_Call__c.field-meta.xml
<CustomField>
    <fullName>Funding_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has Funding Call been completed</description>
    <inlineHelpText>Has Funding Call been completed</inlineHelpText>
    <label>Funding Call</label>
    <type>Checkbox</type>
</CustomField>