force-app/main/default/objects/Implementation__c/fields/Funding_Call_Complete__c.field-meta.xml
<CustomField>
    <fullName>Funding_Call_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box when you&apos;ve completed the Funding Call Steps</inlineHelpText>
    <label>Funding Call Complete</label>
    <type>Checkbox</type>
</CustomField>