force-app/main/default/objects/Implementation__c/fields/Funding_Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Funding_Call_Date_Time__c</fullName>
    <description>Date and time the Funding Call is scheduled</description>
    <inlineHelpText>Date and time the Funding Call is scheduled</inlineHelpText>
    <label>Funding Call Date/Time</label>
    <type>DateTime</type>
</CustomField>