force-app/main/default/objects/Implementation__c/fields/Funding_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Funding_Payroll__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Verify Provider/Schedule + Note. (Ask if they want/need integration/EPS)</description>
    <inlineHelpText>Verify Provider/Schedule + Note. (Ask if they want/need integration/EPS)</inlineHelpText>
    <label>Funding &amp; Payroll</label>
    <type>Checkbox</type>
</CustomField>